fix(ranking): add weighted combined embeddings

--- a/notebooks/14_12_2023.ipynb
+++ b/notebooks/14_12_2023.ipynb
@@ -17310,21 +17310,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 446,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def combine_embeddings(doc2vec_model, bert_embeddings, texts):\n",
+    "def combine_embeddings(doc2vec_model, bert_embeddings, texts, doc2vec_weight=1.0, bert_weight=0.5):\n",
     "    combined_embeddings = []\n",
     "    for bert_emb, text in zip(bert_embeddings, texts):\n",
     "        doc2vec_emb = doc2vec_model.infer_vector(text.split())\n",
     "        doc2vec_emb = np.atleast_1d(doc2vec_emb)\n",
-    "        bert_emb = np.atleast_1d(bert_emb)\n",
     "        \n",
-    "        doc2vec_emb /= np.linalg.norm(doc2vec_emb, ord=2) + 1e-10\n",
-    "        bert_emb /= np.linalg.norm(bert_emb, ord=2) + 1e-10\n",
+    "        weighted_doc2vec_emb = doc2vec_emb * doc2vec_weight\n",
+    "        weighted_bert_emb = bert_emb * bert_weight\n",
     "\n",
-    "        combined_emb = np.concatenate((doc2vec_emb, bert_emb), axis=0)\n",
+    "        combined_emb = np.concatenate((weighted_doc2vec_emb, weighted_bert_emb), axis=0)\n",
     "        combined_embeddings.append(combined_emb)\n",
     "    return combined_embeddings"
    ]
@@ -17441,7 +17440,7 @@
     }
    ],
    "source": [
-    "rank_items_doc2vec(doc2vec_model, jobs[3], resumes) # вакансия веб-разработчика"
+    "rank_items_doc2vec(doc2vec_model, jobs[3], resumes) # вакансия инженера-конструктора"
    ]
   },
   {
@@ -17506,36 +17505,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 437,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[('Опытный системный аналитик с пятилетним стажем работы в крупной IT-компании. Основные обязанности включали анализ бизнес-процессов, сбор требований от заказчиков, разработку технических заданий и координацию разработчиков. Умею работать с SQL, UML, BPMN. Опыт работы с Agile и Scrum. В прошлом году успешно реализовал проект автоматизации процессов для крупного ритейлера, что позволило клиенту увеличить эффективность работы на 20%. Отличные коммуникативные навыки, способность работать в команде и под высоким давлением.',\n",
-       "  84.21),\n",
-       " ('Главный инженер с более чем 15-летним опытом работы в сфере машиностроения. Ответственен за разработку и внедрение новых технологий, управление инженерными командами, контроль качества продукции. Имею опыт работы с CAD/CAM системами, знаком с современными методами производства и автоматизации. На моем счету множество успешно реализованных проектов, в том числе разработка и запуск новой линии по производству автомобильных компонентов. Отличные лидерские качества, способность принимать быстрые и эффективные решения в критических ситуациях.',\n",
-       "  82.4),\n",
-       " ('Веб-разработчик с опытом работы более 8 лет. Специализируюсь на front-end и back-end разработке. Владею HTML, CSS, JavaScript, а также фреймворками React и Node.js. Работал над созданием и поддержкой нескольких крупных веб-платформ, включая интернет-магазины и корпоративные сайты. Имею опыт работы в Agile-командах, умею четко следовать срокам и требованиям заказчика. За последний год разработал и внедрил новый интерфейс для онлайн-магазина, что привело к увеличению конверсии на 30%.',\n",
-       "  79.67),\n",
+       "  84.73),\n",
        " ('Творческий и инновационный графический дизайнер с 7-летним опытом работы в рекламных агентствах и дизайн-студиях. Специализируюсь на создании брендинга, рекламных материалов, веб-дизайна и UX/UI. Владею Adobe Photoshop, Illustrator, InDesign. Мои работы отличаются оригинальностью и уникальностью, я всегда стремлюсь найти нестандартные решения для задач клиентов. Разработал брендинг и фирменный стиль для нескольких стартапов, что помогло им выделиться на рынке и привлечь новых клиентов. Умею работать в сжатые сроки, легко адаптируюсь к новым требованиям и тенденциям в дизайне.',\n",
-       "  79.6),\n",
+       "  81.67),\n",
+       " ('Веб-разработчик с опытом работы более 8 лет. Специализируюсь на front-end и back-end разработке. Владею HTML, CSS, JavaScript, а также фреймворками React и Node.js. Работал над созданием и поддержкой нескольких крупных веб-платформ, включая интернет-магазины и корпоративные сайты. Имею опыт работы в Agile-командах, умею четко следовать срокам и требованиям заказчика. За последний год разработал и внедрил новый интерфейс для онлайн-магазина, что привело к увеличению конверсии на 30%.',\n",
+       "  80.36),\n",
        " ('Менеджер по продажам с более чем десятилетним опытом в сфере B2B и B2C. Специализируюсь на продажах в области финансовых услуг и страхования. Отлично разбираюсь в продуктах компании, умею находить подход к различным типам клиентов. Имею опыт организации и проведения презентаций, участия в переговорах и заключения крупных сделок. В прошлом году лично привлек более 30 новых корпоративных клиентов, что способствовало росту общего оборота компании на 15%. Владею техниками активных продаж, хорошо ориентируюсь в CRM-системах.',\n",
-       "  79.56)]"
+       "  79.86),\n",
+       " ('Главный инженер с более чем 15-летним опытом работы в сфере машиностроения. Ответственен за разработку и внедрение новых технологий, управление инженерными командами, контроль качества продукции. Имею опыт работы с CAD/CAM системами, знаком с современными методами производства и автоматизации. На моем счету множество успешно реализованных проектов, в том числе разработка и запуск новой линии по производству автомобильных компонентов. Отличные лидерские качества, способность принимать быстрые и эффективные решения в критических ситуациях.',\n",
+       "  79.77)]"
       ]
      },
-     "execution_count": 270,
+     "execution_count": 437,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rank_items_bert(bert_model, tokenizer, jobs[3], resumes) # Ранжирование резюме для вакансии веб-разработчика"
+    "rank_items_bert(bert_model, tokenizer, jobs[3], resumes) # Ранжирование резюме для вакансии инженера-конструктора"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 432,
    "metadata": {},
    "outputs": [
     {
@@ -17553,7 +17552,7 @@
        "  73.97)]"
       ]
      },
-     "execution_count": 271,
+     "execution_count": 432,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -17611,46 +17610,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 450,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('Менеджер по продажам с более чем десятилетним опытом в сфере B2B и B2C. Специализируюсь на продажах в области финансовых услуг и страхования. Отлично разбираюсь в продуктах компании, умею находить подход к различным типам клиентов. Имею опыт организации и проведения презентаций, участия в переговорах и заключения крупных сделок. В прошлом году лично привлек более 30 новых корпоративных клиентов, что способствовало росту общего оборота компании на 15%. Владею техниками активных продаж, хорошо ориентируюсь в CRM-системах.',\n",
-       "  82.59),\n",
+       "[('Опытный системный аналитик с пятилетним стажем работы в крупной IT-компании. Основные обязанности включали анализ бизнес-процессов, сбор требований от заказчиков, разработку технических заданий и координацию разработчиков. Умею работать с SQL, UML, BPMN. Опыт работы с Agile и Scrum. В прошлом году успешно реализовал проект автоматизации процессов для крупного ритейлера, что позволило клиенту увеличить эффективность работы на 20%. Отличные коммуникативные навыки, способность работать в команде и под высоким давлением.',\n",
+       "  83.24),\n",
        " ('Главный инженер с более чем 15-летним опытом работы в сфере машиностроения. Ответственен за разработку и внедрение новых технологий, управление инженерными командами, контроль качества продукции. Имею опыт работы с CAD/CAM системами, знаком с современными методами производства и автоматизации. На моем счету множество успешно реализованных проектов, в том числе разработка и запуск новой линии по производству автомобильных компонентов. Отличные лидерские качества, способность принимать быстрые и эффективные решения в критических ситуациях.',\n",
-       "  80.89),\n",
+       "  81.91),\n",
+       " ('Менеджер по продажам с более чем десятилетним опытом в сфере B2B и B2C. Специализируюсь на продажах в области финансовых услуг и страхования. Отлично разбираюсь в продуктах компании, умею находить подход к различным типам клиентов. Имею опыт организации и проведения презентаций, участия в переговорах и заключения крупных сделок. В прошлом году лично привлек более 30 новых корпоративных клиентов, что способствовало росту общего оборота компании на 15%. Владею техниками активных продаж, хорошо ориентируюсь в CRM-системах.',\n",
+       "  79.93),\n",
        " ('Веб-разработчик с опытом работы более 8 лет. Специализируюсь на front-end и back-end разработке. Владею HTML, CSS, JavaScript, а также фреймворками React и Node.js. Работал над созданием и поддержкой нескольких крупных веб-платформ, включая интернет-магазины и корпоративные сайты. Имею опыт работы в Agile-командах, умею четко следовать срокам и требованиям заказчика. За последний год разработал и внедрил новый интерфейс для онлайн-магазина, что привело к увеличению конверсии на 30%.',\n",
-       "  77.66),\n",
-       " ('Опытный системный аналитик с пятилетним стажем работы в крупной IT-компании. Основные обязанности включали анализ бизнес-процессов, сбор требований от заказчиков, разработку технических заданий и координацию разработчиков. Умею работать с SQL, UML, BPMN. Опыт работы с Agile и Scrum. В прошлом году успешно реализовал проект автоматизации процессов для крупного ритейлера, что позволило клиенту увеличить эффективность работы на 20%. Отличные коммуникативные навыки, способность работать в команде и под высоким давлением.',\n",
-       "  75.68),\n",
+       "  79.37),\n",
        " ('Творческий и инновационный графический дизайнер с 7-летним опытом работы в рекламных агентствах и дизайн-студиях. Специализируюсь на создании брендинга, рекламных материалов, веб-дизайна и UX/UI. Владею Adobe Photoshop, Illustrator, InDesign. Мои работы отличаются оригинальностью и уникальностью, я всегда стремлюсь найти нестандартные решения для задач клиентов. Разработал брендинг и фирменный стиль для нескольких стартапов, что помогло им выделиться на рынке и привлечь новых клиентов. Умею работать в сжатые сроки, легко адаптируюсь к новым требованиям и тенденциям в дизайне.',\n",
-       "  73.45)]"
+       "  78.75)]"
       ]
      },
-     "execution_count": 301,
+     "execution_count": 450,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rank_items_doc2vec_bert(doc2vec_model, bert_model, tokenizer, jobs[3], resumes) # вакансия веб-разработчика"
+    "rank_items_doc2vec_bert(doc2vec_model, bert_model, tokenizer, jobs[3], resumes) # вакансия инженера-конструктора"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 448,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[('В рекламное агентство требуется творческий копирайтер для создания текстов различной тематики. Обязанности: написание рекламных и PR-текстов, создание контента для сайтов и социальных сетей, работа над креативными концепциями. Требуется опыт написания текстов, креативность, отличное владение русским языком. Мы предлагаем возможность реализации творческого потенциала, работу над интересными проектами и достойную оплату труда.',\n",
-       "  54.52)]"
+       "  79.99),\n",
+       " ('В маркетинговое агентство требуется креативный и амбициозный маркетолог. Обязанности: разработка маркетинговых стратегий, проведение рекламных кампаний, анализ эффективности маркетинговых действий, работа с социальными сетями и контентом. Требуется опыт в маркетинге не менее 3 лет, умение работать в команде, знание инструментов интернет-маркетинга. Мы предлагаем работу в динамичной среде, возможность реализовать свои идеи и конкурентоспособную заработную плату.',\n",
+       "  76.8),\n",
+       " ('ИТ-компания ищет талантливого программиста 1C для разработки и поддержки корпоративных приложений. Основные задачи: разработка и оптимизация программных решений на платформе 1C, работа с клиентами по техническим заданиям, тестирование и документирование программного обеспечения. Требуется знание 1C:Предприятие 8, опыт программирования и понимание бизнес-процессов. Мы предлагаем работу в комфортабельном офисе, дружный коллектив и достойную заработную плату.',\n",
+       "  75.99),\n",
+       " ('Требуется инженер-конструктор в инженерно-проектное бюро. Задачи: разработка проектной документации, расчеты и моделирование в CAD-системах, сопровождение проектов на всех этапах. Требования: высшее техническое образование, опыт работы в проектировании, знание AutoCAD и других CAD-систем. Предлагаем интересные проекты, работу в команде профессионалов, стабильную заработную плату и возможности для карьерного роста.',\n",
+       "  75.16),\n",
+       " ('Требуется опытный руководитель отдела продаж для работы в крупной торговой компании. Обязанности: разработка и реализация стратегии продаж, управление командой менеджеров, анализ рынка и конкурентов, участие в переговорах на высоком уровне. Требования: опыт работы на аналогичной должности не менее 5 лет, отличные навыки управления и коммуникации, знание современных технологий продаж. Предлагаем стабильную работу в динамично развивающейся компании, конкурентоспособную заработную плату и возможности для профессионального роста.',\n",
+       "  71.24)]"
       ]
      },
-     "execution_count": 292,
+     "execution_count": 448,
      "metadata": {},
      "output_type": "execute_result"
     }
